Resolves: tdf#135603 crash on rename item in customize dialog

Change-Id: Ib5b04ec8ce974c87646b6bf4989094c8334a0006
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/100428
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>